# cuatro-en-ralla-backend

./: .env.example  .gitignore  config.py  dependencies.py  firebase-service-account.json  firebase_admin_init.py  main.py  pyproject.toml  requirements.txt
cuatro_en_ralla_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
game/: board.py  manager.py  room.py
routers/: auth.py  lobby.py  ws.py
tests/: test_auth.py  test_board.py  test_room.py  test_ws.py
